<resources>
    <string name="app_name">ParliamentMembers</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button">Button</string>
    <string name="party">party</string>
    <string name="choose_a_party">Choose a party</string>
    <string name="party_logo">Party logo</string>
    <string name="partyLogo">party logo</string>
    <string name="kok_name">National Coalition Party</string>
    <string name="sd_name">"Social Democratic Party"</string>
    <string name="ps_name">"Finns Party"</string>
    <string name="kesk_name">"Centre Party"</string>
    <string name="vihr_name">"Green League"</string>
    <string name="vas_name">"Left Alliance"</string>
    <string name="r_name">"Swedish People´s Party"</string>
    <string name="kd_name">"Christian Democrats"</string>
    <string name="liik_name">"Movement Now"</string>
    <string name="vkk_name">"Power Belongs to the People"</string>
    <string name="partyID">partyID</string>
    <string name="info">Info</string>
    <string name="last">last</string>
    <string name="first">first</string>
    <string name="face_pic">face pic</string>
    <string name="constituency">constituency</string>
    <string name="age">age</string>
    <string name="rate_pm">Rate MP</string>
    <string name="rate_member">Write a note about the MP</string>
    <string name="save">Save</string>
    <string name="test">Test</string>
    <string name="rating">rating</string>
    <string name="by_party">Parties</string>
    <string name="by_member">All members</string>
    <string name="constituencies">Constituencies</string>
    <string name="title">title</string>
    <string name="minister">Minister</string>
    <string name="pm">Member of Parliament</string>
    <string name="headline">Parliament of Finland</string>
    <string name="find_a_member_by_name">Name of the MP</string>
    <string name="parlament_logo">parlament logo</string>
    <string name="find">Search</string>
    <string name="helsinki">Helsinki</string>
    <string name="uusimaa">Uusimaa</string>
    <string name="varsinais_suomi">Varsinais-Suomi</string>
    <string name="satakunta">Satakunta</string>
    <string name="land">Åland</string>
    <string name="h_me">Häme</string>
    <string name="pirkanmaa">Pirkanmaa</string>
    <string name="southeast_finland">Southeast Finland</string>
    <string name="savo_karelia">Savo-Karelia</string>
    <string name="vaasa">Vaasa</string>
    <string name="central_finland">Central Finland</string>
    <string name="oulu">Oulu</string>
    <string name="lapland">Lapland</string>
    <string name="string_lapland">Lapland</string>
    <string name="search_by_name">Search</string>
    <string name="parties">Parties</string>
    <string name="all_members">All members</string>
    <string name="name">name</string>
    <string name="const_member_lastname">constMemberLastName</string>




</resources>