<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="2"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/memberImageView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:layout_weight="0.5"
        android:contentDescription="@string/face_pic"
        app:srcCompat="@drawable/eduskunta" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="horizontal">

        <TextView
            android:id="@+id/memberFirstName"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="0.5"
            android:foregroundGravity="left|center_horizontal"
            android:gravity="center_vertical|end"
            android:padding="5dp"
            android:text="@string/first"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/memberLastName"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:foregroundGravity="right"
            android:gravity="start|center_vertical"
            android:padding="5dp"
            android:text="@string/last"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>